# 3d-renderer-rust

./: .gitignore  605.index.js  Cargo.toml  README.md  build.rs  index.html  index.js  package-lock.json  package.json  styles.css  webpack.config.js
.github/workflows/: ci.yml
assets/shaders/: model_gl4.frag.glsl  model_gl4.vert.glsl  model_gles3.frag.glsl  model_gles3.vert.glsl  skybox_gl4.frag.glsl  skybox_gl4.vert.glsl  skybox_gles3.frag.glsl  skybox_gles3.vert.glsl
js/: index.js
site/: index.html  styles.css
src/: app.rs  assets.rs  camera.rs  draw_properties.rs  gui.rs  html_ui.rs  lib.rs  main.rs  model.rs  renderer.rs  shader.rs  skybox.rs
