[package]
name = "renderer-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
cgmath = "0.18.0"
gl_generator = "0.14.0"
glfw = { version = "0.58.0", features = ["wayland"] }
image = { version = "0.25.2", default-features = false, features = ["jpeg", "rayon"] }
imgui-glfw-rs = { path = "vendor/imgui-glfw-rs" }
raw-window-handle = "0.6.2"
tobj = "4.0.2"

[build-dependencies]
gl_generator = "0.14.0"

[[bin]]
name = "3d-renderer-rust"
path = "src/main.rs"
